0.9.0/_sources/generated/statsmodels.discrete.discrete_model.NegativeBinomial.rst.txt
statsmodels.discrete.discrete_model.NegativeBinomial
====================================================

.. currentmodule:: statsmodels.discrete.discrete_model

.. autoclass:: NegativeBinomial

   

   
   .. rubric:: Methods

   .. autosummary::
      :toctree:
   
    
    
      ~NegativeBinomial.cdf
    
    
      ~NegativeBinomial.cov_params_func_l1
    
    
      ~NegativeBinomial.fit
    
    
      ~NegativeBinomial.fit_regularized
    
    
      ~NegativeBinomial.from_formula
    
    
      ~NegativeBinomial.hessian
    
    
      ~NegativeBinomial.information
    
    
      ~NegativeBinomial.initialize
    
    
      ~NegativeBinomial.loglike
    
    
      ~NegativeBinomial.pdf
    
    
      ~NegativeBinomial.predict
    
    
      ~NegativeBinomial.score
    
    
      ~NegativeBinomial.score_obs
    
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~NegativeBinomial.endog_names
      ~NegativeBinomial.exog_names
   
   