v0.10.0/_sources/generated/statsmodels.discrete.discrete_model.NegativeBinomial.rst.txt
statsmodels.discrete.discrete\_model.NegativeBinomial
=====================================================

.. currentmodule:: statsmodels.discrete.discrete_model

.. autoclass:: NegativeBinomial

   

   .. HACK -- the point here is that we don't want this to appear in the output, but the autosummary should still generate the pages.
      .. autosummary::
         :toctree:
      
         NegativeBinomial.cdf
         NegativeBinomial.cov_params_func_l1
         NegativeBinomial.fit
         NegativeBinomial.fit_regularized
         NegativeBinomial.from_formula
         NegativeBinomial.hessian
         NegativeBinomial.information
         NegativeBinomial.initialize
         NegativeBinomial.loglike
         NegativeBinomial.pdf
         NegativeBinomial.predict
         NegativeBinomial.score
         NegativeBinomial.score_obs



   

   .. HACK -- the point here is that we don't want this to appear in the output, but the autosummary should still generate the pages.
      .. autosummary::
         :toctree:
      
         NegativeBinomial.endog_names
         NegativeBinomial.exog_names

